--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -6,4 +6,12 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <!--item name="android:textColorPrimary">TITLE_COLOR_GOES_HERE</item-->
+        <!--item name="android:textColorSecondary">SUBTITLE_COLOR_GOES_HERE</item-->
+    </style>
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <!--item name="android:textColorPrimary">TITLE_COLOR_GOES_HERE</item-->
+        <!--item name="android:textColorSecondary">SUBTITLE_COLOR_GOES_HERE</item-->
+    </style>
 </resources>
