--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,5 +4,13 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
     </style>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <!--item name="android:textColorPrimary">TITLE_COLOR_GOES_HERE</item-->
+        <!--item name="android:textColorSecondary">SUBTITLE_COLOR_GOES_HERE</item-->
+    </style>
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <!--item name="android:textColorPrimary">TITLE_COLOR_GOES_HERE</item-->
+        <!--item name="android:textColorSecondary">SUBTITLE_COLOR_GOES_HERE</item-->
+    </style>
 
 </resources>
